chore: introduce component ARG to align with client component which uses another pre-created user

--- a/packages/amplication-data-service-generator-runner/Dockerfile
+++ b/packages/amplication-data-service-generator-runner/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18.13.0-slim AS base
 
-ARG user=data-service-generator-runner
+ARG component=data-service-generator-runner
+ARG user=${component}
 ARG uid=1001
 ARG gid=$uid
 
@@ -8,7 +9,7 @@ RUN apk add g++ make python3
 
 WORKDIR /workspace/packages/${user}
 
-COPY ./dist/packages/amplication-${user} .
+COPY ./dist/packages/amplication-${component} .
 RUN npm install --omit-dev
 
 RUN groupadd --gid ${gid} ${user}
