--- a/packages/amplication-build-manager/Dockerfile
+++ b/packages/amplication-build-manager/Dockerfile
@@ -1,15 +1,16 @@
 FROM node:18.13.0-slim AS base
 
-ARG user=build-manager
+ARG component=build-manager
+ARG user=${component}
 ARG uid=1001
 ARG gid=$uid
 
 WORKDIR /workspace/packages/${user}
 
-COPY ./dist/packages/amplication-${user}/package*.json .
+COPY ./dist/packages/amplication-${component}/package*.json .
 RUN npm install --omit-dev
 
-COPY ./dist/packages/amplication-${user} .
+COPY ./dist/packages/amplication-${component} .
 
 RUN groupadd --gid ${gid} ${user}
 RUN useradd --uid ${uid} --gid ${gid} -m ${user}
