--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18.13.0-slim AS base
 
-ARG user=server
+ARG component=server
+ARG user=${component}
 ARG uid=1001
 ARG gid=$uid
 
@@ -9,10 +10,10 @@ RUN apt-get update && apt-get install -y openssl
 
 WORKDIR /workspace/packages/${user}
 
-COPY ./dist/packages/amplication-${user}/package*.json .
+COPY ./dist/packages/amplication-${component}/package*.json .
 RUN npm install --omit-dev
 
-COPY ./dist/packages/amplication-${user} .
+COPY ./dist/packages/amplication-${component} .
 
 RUN groupadd --gid ${gid} ${user}
 RUN useradd --uid ${uid} --gid ${gid} -m ${user}
