fix(storage-gateway): align env variable

--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -5,14 +5,18 @@ COMPOSE_PROJECT_NAME=amplication-storage-gateway
 JWT_SECRET_KEY=m&XAFzBpM3es
 JWT_EXPIRATION=2d
 
-# Kafka Topics
-CHECK_USER_ACCESS_TOPIC="auth.user.access"
-
 # Kafka
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
-KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
 
+# Kafka Topics
+KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
+CHECK_USER_ACCESS_TOPIC="authorization.internal.can-access-build.request.0"
+
+# Storage
 BUILD_OUTPUT_FOLDER=output
 BUILD_ARTIFACTS_BASE_FOLDER=".amplication/build-artifacts"
+BUILD_ARTIFACTS_CODE_FOLDER="code"
+KAFKA_GROUP_ID="storage-server-group"
+
