--- a/ee/packages/amplication-git-pull-service/.env
+++ b/ee/packages/amplication-git-pull-service/.env
@@ -15,7 +15,16 @@ COMPOSE_PROJECT_NAME=amplication-git-pull-service
 # Kafka
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CONSUMER_GROUP=git-pull-event
-KAFKA_CLIENT_ID=repository-pull
+GIT_DEFAULT_ORIGIN_NAME="origin"
+KAFKA_CLIENT_ID="git-pull-service"
+KAFKA_GROUP_ID="git-pull-service-group"
+
+# Kafka Topics
+KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
+
+# Storage
+STORAGE_PATH="/amplication-data/git-data"
+MAX_SNAPSHOTS="100"    
 
 # Git
 MAX_SNAPSHOTS=[place-your-max-snapshot-here]
