--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -1,9 +1,13 @@
 # Secrets
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 
-# Kafka
-KAFKA_BROKERS='localhost:9092'
-KAFKA_CLIENT_ID='amplication-git-push-webhook-service'
-
 # DB
 SERVICE_DB_NAME=amplication
+
+# Kafka
+KAFKA_CLIENT_ID="git-push-webhook-service"
+KAFKA_GROUP_ID="amplication-git-push-webhook-service"
+KAFKA_BROKERS='localhost:9092'
+
+# Kafka Topics
+KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
