fix: set the change ownership command to be one directory down

--- a/ee/packages/amplication-git-push-webhook-service/Dockerfile
+++ b/ee/packages/amplication-git-push-webhook-service/Dockerfile
@@ -16,7 +16,7 @@ COPY ./packages/amplication-prisma-db ./workspace/packages/amplication-prisma-db
 
 RUN groupadd --gid ${gid} ${user}
 RUN useradd --uid ${uid} --gid ${gid} -m ${user}
-RUN chown -R ${uid}:${gid} /workspace/packages/${user}
+RUN chown -R ${uid}:${gid} /workspace/packages/
 
 USER ${user}
 
