chore: add nx_cloud_access_token to use caching on package step

--- a/.github/workflows/deployment.production.yml
+++ b/.github/workflows/deployment.production.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [published]
 
+env:
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+
 jobs:
   preparation:
     name: Preparation
