--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,7 @@ jobs:
   nx:
     name: Nx
     needs: ci
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'next' }}
     uses: ./.github/workflows/nx.template.yml
     with:
       nx-head: ${{ github.head_ref || github.ref_name }}
