feat(local-dsg-runner): add autoremove completed dsg container jobs

--- a/packages/local-dsg-runner/.env
+++ b/packages/local-dsg-runner/.env
@@ -4,3 +4,4 @@ BUILD_OUTPUT_PATH="/dsg-job/code"
 BUILD_SPEC_PATH="/dsg-job/input.json"
 BUILD_MANAGER_URL="http://host.docker.internal:5010"
 PORT=8900
+AUTOREMOVE_CONTAINER=true
