--- a/.github/workflows/release.template.yml
+++ b/.github/workflows/release.template.yml
@@ -115,7 +115,8 @@ jobs:
         env:
           INPUT_TAGS: ${{ steps.meta.outputs.tags }}
           INPUT_PUSH: true
-
+          INPUT_BUILD_ARGS: GIT_REF=${{ github.ref }}
+          
   configure:
     name: Configure deployment target environment
     runs-on: ubuntu-20.04
