ci: fix missing nx target that allow applications to be deployable

--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -109,7 +109,8 @@
         "push": false,
         "tags": ["amplication/client:latest"]
       }
-    }
+    },
+    "deploy": { "executor": "nx:run-commands" }
   },
   "tags": []
 }
