--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -100,7 +100,8 @@
         "push": false,
         "tags": ["amplication/server:latest"]
       }
-    }
+    },
+    "deploy": { "executor": "nx:run-commands" }
   },
   "tags": []
 }
