chore(plugin-api): add the deploy as a target

--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -129,9 +129,10 @@
       "executor": "@nx-tools/nx-docker:build",
       "options": {
         "push": false,
-        "tags": ["amplication/git-pull-service"]
+        "tags": ["amplication/git-pull-service:latest"]
       }
     }
+    "deploy": { "executor": "nx:run-commands" }
   },
   "tags": []
 }
