feat(git-utils): add strict null check

--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -19,3 +19,5 @@ BUILD_ARTIFACTS_CODE_FOLDER="code"
 
 # GitHub:
 GITHUB_APP_APP_ID=[github-app-app-id]
+GITHUB_APP_INSTALLATION_URL=[GITHUB_APP_INSTALLATION_URL]
+GITHUB_APP_PRIVATE_KEY=[GITHUB_APP_PRIVATE_KEY]
