--- a/packages/amplication-git-utils/tsconfig.lib.json
+++ b/packages/amplication-git-utils/tsconfig.lib.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
+    "strictNullChecks": true,
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
