fix: remove trailing slash on copy command

--- a/libs/data-service-generator/src/server/static/Dockerfile
+++ b/libs/data-service-generator/src/server/static/Dockerfile
@@ -46,7 +46,7 @@ RUN useradd --uid ${uid} --gid ${gid} -m ${user}
 COPY --from=base /app/node_modules/ ./node_modules
 COPY --from=base /app/package.json ./package.json
 COPY --from=base /app/dist ./dist
-COPY --from=base /app/prisma ./prisma/
+COPY --from=base /app/prisma ./prisma
 COPY --from=base /app/scripts ./scripts
 COPY --from=base /app/src ./src
 COPY --from=base /app/tsconfig* ./
