--- a/ee/packages/amplication-git-push-webhook-service/Dockerfile
+++ b/ee/packages/amplication-git-push-webhook-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.13.0-slim AS base
+FROM node:18.13.0-slim AS production
 
 ARG component=git-push-webhook-service
 ARG user=${component}
