--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -7,22 +7,27 @@ ARG gid=$uid
 
 # Required to run Prisma on ARM64 machine:
 # https://github.com/prisma/prisma/issues/861#issuecomment-881992292
-RUN apt-get update && apt-get install -y openssl
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y \
+        openssl=1.1.1n-0+deb11u4 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace/packages/${user}
 
 COPY ./dist/packages/amplication-${component}/package*.json .
+
 RUN npm install --omit-dev
 
 COPY ./dist/packages/amplication-${component} .
 
-RUN groupadd --gid ${gid} ${user}
-RUN useradd --uid ${uid} --gid ${gid} -m ${user}
-RUN chown -R ${uid}:${gid} /workspace/packages/
+RUN groupadd --gid ${gid} ${user} \
+    && useradd --uid ${uid} --gid ${gid} -m ${user} \
+    && chown -R ${uid}:${gid} /workspace/packages/
 
 USER ${user}
 
 ENV PORT=3333
 EXPOSE $PORT
 
-ENTRYPOINT ["node", "./main.js"]
+ENTRYPOINT [ "node", "./main.js" ]
