--- a/packages/amplication-build-manager/Dockerfile
+++ b/packages/amplication-build-manager/Dockerfile
@@ -8,13 +8,14 @@ ARG gid=$uid
 WORKDIR /workspace/packages/${user}
 
 COPY ./dist/packages/amplication-${component}/package*.json .
+
 RUN npm install --omit-dev
 
 COPY ./dist/packages/amplication-${component} .
 
-RUN groupadd --gid ${gid} ${user}
-RUN useradd --uid ${uid} --gid ${gid} -m ${user}
-RUN chown -R ${uid}:${gid} /workspace/packages/
+RUN groupadd --gid ${gid} ${user} \
+    && useradd --uid ${uid} --gid ${gid} -m ${user} \
+    && chown -R ${uid}:${gid} /workspace/packages/
 
 USER ${user}
 
