--- a/packages/amplication-data-service-generator-runner/Dockerfile
+++ b/packages/amplication-data-service-generator-runner/Dockerfile
@@ -5,15 +5,23 @@ ARG user=${component}
 ARG uid=1001
 ARG gid=$uid
 
-RUN apt-get update && apt-get install -y g++ make python3
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y \
+        g++=4:10.2.1-1 \
+        make=4.3-4.1 \
+        python3=3.9.2-3 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 
 WORKDIR /workspace/packages/${user}
 
 COPY ./dist/packages/amplication-${component} .
+
 RUN npm install --omit-dev
 
-RUN groupadd --gid ${gid} ${user}
-RUN useradd --uid ${uid} --gid ${gid} -m ${user}
-RUN chown -R ${uid}:${gid} /workspace/packages/
+RUN groupadd --gid ${gid} ${user} \
+    && useradd --uid ${uid} --gid ${gid} -m ${user} \
+    && chown -R ${uid}:${gid} /workspace/packages/
 
 USER ${user}
