--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -63,6 +63,18 @@
         }
       }
     },
+    "refresh:plugins": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "curl --location --request POST 'http://localhost:3005/graphql' --header 'Content-Type: application/json' --data-raw '{\"query\":\"mutation ProcessPluginCatalog {processPluginCatalog {  name  npm  versions {    version    updatedAt    deprecated  }}}\"}'",
+        "envFile": "packages/amplication-plugin-api/.env"
+      },
+      "configurations": {
+        "production": {
+          "command": "curl --location --request POST 'https://plugin-api.amplication.com/graphql' --header 'Content-Type: application/json' --data-raw '{\"query\":\"mutation ProcessPluginCatalog {processPluginCatalog {  name  npm  versions {    version    updatedAt    deprecated  }}}\"}'"
+        }
+      }
+    },
     "db:prisma:generate": {
       "executor": "nx:run-commands",
       "outputs": ["{workspaceRoot}/prisma/generated-prisma-client"],
