chore(deps): update nx to latest and jest to v28

--- a/packages/data-service-generator/project.json
+++ b/packages/data-service-generator/project.json
@@ -61,8 +61,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/packages/data-service-generator"],
       "options": {
-        "jestConfig": "packages/data-service-generator/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "packages/data-service-generator/jest.config.ts"
       }
     },
     "e2e": {
