--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -19,8 +19,7 @@
         "{workspaceRoot}/coverage/packages/amplication-git-pull-request-service"
       ],
       "options": {
-        "jestConfig": "packages/amplication-git-pull-request-service/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "packages/amplication-git-pull-request-service/jest.config.ts"
       }
     },
     "build": {
