--- a/packages/amplication-storage-gateway/project.json
+++ b/packages/amplication-storage-gateway/project.json
@@ -50,10 +50,16 @@
       }
     },
     "docker:build": {
-      "executor": "@nx-tools/nx-docker:build",
+      "executor": "@nx-tools/nx-container:build",
       "options": {
         "push": false,
-        "tags": ["amplication/storage-gateway:latest"]
+        "tags": ["amplication/storage-gateway:latest"],
+        "build-args": ["GIT_REF_NAME=latest-local", "GIT_SHA=unicorn-🦄-sha"]
+      },
+      "configurations": {
+        "production": {
+          "build-args": ["GIT_REF_NAME=${GIT_REF_NAME}", "GIT_SHA=${GIT_SHA}"]
+        }
       }
     },
     "deploy": { "executor": "nx:run-commands" }
