--- a/ee/packages/amplication-git-push-webhook-service/project.json
+++ b/ee/packages/amplication-git-push-webhook-service/project.json
@@ -72,10 +72,16 @@
       }
     },
     "docker:build": {
-      "executor": "@nx-tools/nx-docker:build",
+      "executor": "@nx-tools/nx-container:build",
       "options": {
         "push": false,
-        "tags": ["amplication/git-push-webhook-service:latest"]
+        "tags": ["amplication/git-push-webhook-service:latest"],
+        "build-args": ["GIT_REF_NAME=latest-local", "GIT_SHA=unicorn-🦄-sha"]
+      },
+      "configurations": {
+        "production": {
+          "build-args": ["GIT_REF_NAME=${GIT_REF_NAME}", "GIT_SHA=${GIT_SHA}"]
+        }
       }
     }
   },
