--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -52,10 +52,16 @@
       }
     },
     "docker:build": {
-      "executor": "@nx-tools/nx-docker:build",
+      "executor": "@nx-tools/nx-container:build",
       "options": {
         "push": false,
-        "tags": ["amplication/git-pull-request-service:latest"]
+        "tags": ["amplication/git-pull-request-service:latest"],
+        "build-args": ["GIT_REF_NAME=latest-local", "GIT_SHA=unicorn-🦄-sha"]
+      },
+      "configurations": {
+        "production": {
+          "build-args": ["GIT_REF_NAME=${GIT_REF_NAME}", "GIT_SHA=${GIT_SHA}"]
+        }
       }
     },
     "deploy": { "executor": "nx:run-commands" }
