--- a/packages/data-service-generator/project.json
+++ b/packages/data-service-generator/project.json
@@ -100,12 +100,17 @@
       }
     },
     "docker:build": {
-      "executor": "@nx-tools/nx-docker:build",
+      "executor": "@nx-tools/nx-container:build",
       "dependsOn": ["build"],
       "options": {
         "push": false,
-        "tags": ["amplication/data-service-generator-runner:latest"],
-        "build-args": ["GIT_REF=latest-local-unicorn-🦄"]
+        "tags": ["amplication/data-service-generator:latest"],
+        "build-args": ["GIT_REF_NAME=latest-local", "GIT_SHA=unicorn-🦄-sha"]
+      },
+      "configurations": {
+        "production": {
+          "build-args": ["GIT_REF_NAME=${GIT_REF_NAME}", "GIT_SHA=${GIT_SHA}"]
+        }
       }
     }
   },
