chore(dsg): update docker nx plugin and env variables  (#5177)
* chore: updated docker nx plugin and env variables for DSG

* chore(dsg): use short git sha in build log DSG version

* chore: update gitignore

* chore: rename local sha

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,6 @@ testem.log
 .DS_Store
 Thumbs.db
 
-infra/tilt/.temp/**
-!infra/tilt/.temp/.gitkeep
 .temp
 
 # Next.js
@@ -65,3 +63,5 @@ infra/tilt/.temp/**
 src/schema.graphql
 **/prisma/generated-prisma-client
 .tsbuildinfo
+
+.nx-container/
