fix(data-service-generator): remove amplication- prefix from workspace

--- a/packages/data-service-generator/Dockerfile
+++ b/packages/data-service-generator/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get update \
 
 WORKDIR /workspace/packages/${user}
 
-COPY ./dist/packages/amplication-${component} .
+COPY ./dist/packages/${component} .
 
 RUN npm install --omit-dev
 
