--- a/.github/ISSUE_TEMPLATE/docs-feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/docs-feature-request.yaml
@@ -27,8 +27,9 @@ body:
   - type: textarea
     attributes:
       label: Use Case (Why does the user need it?) 
-      description: Describe the feature or process from the users’ point of view. How does the feature meet the user’s requirements?
-      [Example:](https://docs.amplication.com/how-to/custom-code/#the-vision)
+      description: "
+        Describe the feature or process from the users’ point of view. How does the feature meet the user’s requirements?
+        [Example:](https://docs.amplication.com/how-to/custom-code/#the-vision)'        
       validations:
       required: true
   - type: textarea
@@ -46,9 +47,10 @@ body:
    - type: textarea
      attributes:
       label: How it works (How does the user use it?) 
-      description: Our users are developers, so the emphasis should be on giving information that is required for understanding the feature,
-      rather than step-by-step instructions of how to use the UI. However, there should be a mention of where the feature is located.
-      [Example:](https://docs.amplication.com/how-to/custom-code/#how-it-works).
+      description: "
+        Our users are developers, so the emphasis should be on giving information that is required for understanding the feature,
+        rather than step-by-step instructions of how to use the UI. However, there should be a mention of where the feature is located.
+        [Example:](https://docs.amplication.com/how-to/custom-code/#how-it-works)."
       validations:
       required: true
     - type: textarea
@@ -72,8 +74,9 @@ body:
     - type: textarea
       attributes:
       label: Reference (What data does the user need to use this feature?) 
-      description: Sometimes, some reference info is required. Include the information here, or link to a source of the information.
-      Example:[Plugin Events](https://docs.amplication.com/plugins/plugin-events/CreateEntityServiceBase/)
+      description: "
+        Sometimes, some reference info is required. Include the information here, or link to a source of the information.
+        Example:[Plugin Events](https://docs.amplication.com/plugins/plugin-events/CreateEntityServiceBase/)"
       validations:
       required: false
     - type: textarea
