--- a/package.json
+++ b/package.json
@@ -163,18 +163,19 @@
     "@nestjs/cli": "^8.2.8",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/express": "15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/nest": "15.6.3",
-    "@nrwl/node": "15.6.3",
+    "@nrwl/devkit": "^15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/express": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.4.5",
+    "@nrwl/nest": "15.4.5",
+    "@nrwl/node": "15.4.5",
     "@nrwl/nx-cloud": "15.0.3",
-    "@nrwl/react": "15.6.3",
-    "@nrwl/web": "15.6.3",
-    "@nrwl/webpack": "15.6.3",
-    "@nrwl/workspace": "15.6.3",
+    "@nrwl/react": "15.4.5",
+    "@nrwl/web": "15.4.5",
+    "@nrwl/webpack": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
     "@nx-tools/nx-container": "^4.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
@@ -246,7 +247,7 @@
     "lint-staged": "^13.0.3",
     "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
-    "nx": "15.6.3",
+    "nx": "15.4.5",
     "path-browserify": "^1.0.1",
     "prisma": "^4.6.1",
     "prisma-schema-dsl-types": "^1.0.5",
