--- a/packages/amplication-git-pull-request-service/Dockerfile
+++ b/packages/amplication-git-pull-request-service/Dockerfile
@@ -2,6 +2,10 @@ FROM node:18.12.1-alpine AS base
 
 WORKDIR /app
 
+RUN apk update \
+    && apk add --no-cache git=2.38.3-r1 \
+    && rm /var/cache/apk/*
+
 COPY ./dist/packages/amplication-git-pull-request-service/package.json .
 
 RUN npm i --omit=dev
